test/compile-errors/name-not-found.crow
r record
	f t
	h array x

u union
	t

foo t() s
	x
	a y
	a z b
